[4.0] Numbers not digits
I have checked this with my client Cambridge University Press and they have checked the usage within the Corpus. https://en.wikipedia.org/wiki/Cambridge_English_Corpus The corpus is a multi billion word database of the usage of the english language in the world. The corpus is about how language is used and not just about the dictionary meaning

They wrote

Interesting! I’ve had a look and it looks like ‘number’ is more common – there are only a small number of examples with ‘digit’.

It’s hard to know for sure, as there are only very few examples of the exact sentences you’ve given so I did a more general search and often ‘number’ is used in sentences like ‘they could steal your credit card number and password’. But, I had a scan through and there are definitely lots of examples of e.g. ‘use a password that contains letters, numbers and special characters’, so I think you’re right to go with your feeling on this.

--- a/installation/language/en-US/joomla.ini
+++ b/installation/language/en-US/joomla.ini
@@ -273,8 +273,8 @@ JLIB_JS_AJAX_ERROR_TIMEOUT="A timeout has occurred while fetching the JSON data.
 ; Field password messages
 JFIELD_PASSWORD_INDICATE_COMPLETE="Password accepted"
 JFIELD_PASSWORD_INDICATE_INCOMPLETE="Password doesn't meet site's requirements."
-JFIELD_PASSWORD_NOT_ENOUGH_INTEGERS_N="Password does not have enough digits. At least %s digits are required."
-JFIELD_PASSWORD_NOT_ENOUGH_INTEGERS_N_1="Password does not have enough digits. At least 1 digit is required."
+JFIELD_PASSWORD_NOT_ENOUGH_INTEGERS_N="Password does not have enough numbers. At least %s numbers are required."
+JFIELD_PASSWORD_NOT_ENOUGH_INTEGERS_N_1="Password does not have enough numbers. At least 1 numbers is required."
 JFIELD_PASSWORD_NOT_ENOUGH_LOWERCASE_LETTERS_N="Password does not have enough lower case characters. At least %s lower case characters are required."
 JFIELD_PASSWORD_NOT_ENOUGH_LOWERCASE_LETTERS_N_1="Password does not have enough lower case characters. At least 1 lower case character is required."
 JFIELD_PASSWORD_NOT_ENOUGH_SYMBOLS_N="Password does not have enough symbols. At least %s symbols are required."
