--- a/language/en-GB/joomla.ini
+++ b/language/en-GB/joomla.ini
@@ -192,8 +192,8 @@ JFIELD_ORDERING_DESC="Ordering of the article within the category."
 JFIELD_ORDERING_LABEL="Ordering"
 JFIELD_PASSWORD_INDICATE_COMPLETE="Password accepted"
 JFIELD_PASSWORD_INDICATE_INCOMPLETE="Password doesn't meet site's requirements."
-JFIELD_PASSWORD_NOT_ENOUGH_INTEGERS_N="Password does not have enough digits. At least %s digits are required."
-JFIELD_PASSWORD_NOT_ENOUGH_INTEGERS_N_1="Password does not have enough digits. At least 1 digit is required."
+JFIELD_PASSWORD_NOT_ENOUGH_INTEGERS_N="Password does not have enough numbers. At least %s numbers are required."
+JFIELD_PASSWORD_NOT_ENOUGH_INTEGERS_N_1="Password does not have enough numbers. At least 1 number is required."
 JFIELD_PASSWORD_NOT_ENOUGH_LOWERCASE_LETTERS_N="Password does not have enough lower case characters. At least %s lower case characters are required."
 JFIELD_PASSWORD_NOT_ENOUGH_LOWERCASE_LETTERS_N_1="Password does not have enough lower case characters. At least 1 lower case character is required."
 JFIELD_PASSWORD_NOT_ENOUGH_SYMBOLS_N="Password does not have enough symbols. At least %s symbols are required."
@@ -203,7 +203,7 @@ JFIELD_PASSWORD_NOT_ENOUGH_UPPERCASE_LETTERS_N_1="Password does not have enough 
 JFIELD_PASSWORD_NOTE_DESC="%1 symbol(s), %2 uppercase letter(s), %3 lowercase letter(s), %4 number(s)"
 JFIELD_PASSWORD_NOTE_LBL="Password must contain:"
 JFIELD_PASSWORD_RULES_CHARACTERS="Characters: %d"
-JFIELD_PASSWORD_RULES_DIGITS="Digits: %d"
+JFIELD_PASSWORD_RULES_DIGITS="Numbers: %d"
 JFIELD_PASSWORD_RULES_LOWERCASE="Lower Case: %d"
 JFIELD_PASSWORD_RULES_MINIMUM_REQUIREMENTS="<strong>Minimum Requirements</strong> — %s"
 JFIELD_PASSWORD_RULES_SYMBOLS="Symbols: %d"
