--- a/language/en-GB/tpl_cassiopeia.ini
+++ b/language/en-GB/tpl_cassiopeia.ini
@@ -5,6 +5,11 @@
 
 TPL_CASSIOPEIA_BACKTOTOP="Back to Top"
 TPL_CASSIOPEIA_BACKTOTOP_LABEL="Back-to-top Link"
+TPL_CASSIOPEIA_COLOR_NAME_LABEL="Color Theme"
+TPL_CASSIOPEIA_COLOR_NAME_AUTUMM="Autumm colors"
+TPL_CASSIOPEIA_COLOR_NAME_SPRING="Spring colors"
+TPL_CASSIOPEIA_COLOR_NAME_SUMMER="Summer colors"
+TPL_CASSIOPEIA_COLOR_NAME_WINTER="Winter colors"
 TPL_CASSIOPEIA_FLUID="Fluid"
 TPL_CASSIOPEIA_FLUID_LABEL="Fluid Layout"
 TPL_CASSIOPEIA_LOGO_LABEL="Logo"
