--- a/language/en-GB/tpl_cassiopeia.ini
+++ b/language/en-GB/tpl_cassiopeia.ini
@@ -6,10 +6,10 @@
 TPL_CASSIOPEIA_BACKTOTOP="Back to Top"
 TPL_CASSIOPEIA_BACKTOTOP_LABEL="Back-to-top Link"
 TPL_CASSIOPEIA_COLOR_NAME_LABEL="Colour Theme"
-TPL_CASSIOPEIA_COLOR_NAME_AUTUMN="Autumn colours"
-TPL_CASSIOPEIA_COLOR_NAME_SPRING="Spring colours"
-TPL_CASSIOPEIA_COLOR_NAME_SUMMER="Summer colours"
-TPL_CASSIOPEIA_COLOR_NAME_WINTER="Winter colours"
+TPL_CASSIOPEIA_COLOR_NAME_AUTUMN="Autumn"
+TPL_CASSIOPEIA_COLOR_NAME_SPRING="Spring"
+TPL_CASSIOPEIA_COLOR_NAME_SUMMER="Summer"
+TPL_CASSIOPEIA_COLOR_NAME_WINTER="Winter"
 TPL_CASSIOPEIA_FLUID="Fluid"
 TPL_CASSIOPEIA_FLUID_LABEL="Fluid Layout"
 TPL_CASSIOPEIA_LOGO_LABEL="Logo"
