--- a/language/en-GB/tpl_cassiopeia.ini
+++ b/language/en-GB/tpl_cassiopeia.ini
@@ -7,7 +7,7 @@ TPL_CASSIOPEIA_BACKTOTOP="Back to Top"
 TPL_CASSIOPEIA_BACKTOTOP_LABEL="Back-to-top Link"
 TPL_CASSIOPEIA_FLUID="Fluid"
 TPL_CASSIOPEIA_FLUID_LABEL="Fluid Layout"
-TPL_CASSIOPEIA_FONT_GROUP_LOCAL="Fonts from Local Folder"
+TPL_CASSIOPEIA_FONT_GROUP_LOCAL="Fonts from Folder"
 TPL_CASSIOPEIA_FONT_GROUP_WEB="Fonts from Web"
 TPL_CASSIOPEIA_FONT_LABEL="Fonts scheme"
 TPL_CASSIOPEIA_LOGO_LABEL="Logo"
