--- a/language/en-GB/tpl_cassiopeia.ini
+++ b/language/en-GB/tpl_cassiopeia.ini
@@ -9,6 +9,7 @@ TPL_CASSIOPEIA_FLUID="Fluid"
 TPL_CASSIOPEIA_FLUID_LABEL="Fluid Layout"
 TPL_CASSIOPEIA_FONT_GROUP_LOCAL="Fonts from Folder"
 TPL_CASSIOPEIA_FONT_GROUP_WEB="Fonts from Web"
+TPL_CASSIOPEIA_FONT_INFO_TEXT="<strong>Important note on font schemes</strong><br>Loading fonts from web might be against data protection rules in some countries.<br>Loading fonts from a local folder might be a performance issue on sites with high traffic."
 TPL_CASSIOPEIA_FONT_LABEL="Fonts scheme"
 TPL_CASSIOPEIA_LOGO_LABEL="Logo"
 TPL_CASSIOPEIA_STATIC="Static"
