--- a/language/en-GB/tpl_cassiopeia.ini
+++ b/language/en-GB/tpl_cassiopeia.ini
@@ -15,7 +15,7 @@ TPL_CASSIOPEIA_FLUID_LABEL="Fluid Layout"
 TPL_CASSIOPEIA_FONT_GROUP_LOCAL="Fonts from Folder"
 TPL_CASSIOPEIA_FONT_GROUP_WEB="Fonts from Web"
 TPL_CASSIOPEIA_FONT_LABEL="Fonts Scheme"
-TPL_CASSIOPEIA_FONT_NOTE_TEXT="<strong>Important Note on Font Schemes</strong><br>Loading fonts from web might be against data protection rules in some countries.<br>Loading fonts from a local folder might be a performance issue on sites with high traffic."
+TPL_CASSIOPEIA_FONT_NOTE_TEXT="Loading fonts from external sources might be against privacy regulations in some countries.<br>Loading fonts from a local folder might have a performance impact on your site."
 TPL_CASSIOPEIA_LOGO_LABEL="Logo"
 TPL_CASSIOPEIA_STATIC="Static"
 TPL_CASSIOPEIA_STICKY_LABEL="Sticky Header"
