--- a/language/en-GB/com_content.ini
+++ b/language/en-GB/com_content.ini
@@ -19,7 +19,8 @@ COM_CONTENT_CONTENT_TYPE_CATEGORY="Article Category"
 COM_CONTENT_CREATE_ARTICLE="Submit new article"
 COM_CONTENT_CREATED_DATE="Created Date"
 COM_CONTENT_CREATED_DATE_ON="Created: %s"
-COM_CONTENT_EDIT_ITEM="Edit Article"
+COM_CONTENT_EDIT_PUBLISHED_ARTICLE="Edit Published Article"
+COM_CONTENT_EDIT_UNPUBLISHED_ARTICLE="Edit Unpublished Article"
 COM_CONTENT_ERROR_ARTICLE_NOT_FOUND="Article not found"
 COM_CONTENT_ERROR_LOGIN_TO_VIEW_ARTICLE="Please login to view the article"
 COM_CONTENT_ERROR_PARENT_CATEGORY_NOT_FOUND="Parent category not found"
