--- a/administrator/language/en-GB/com_content.sys.ini
+++ b/administrator/language/en-GB/com_content.sys.ini
@@ -45,6 +45,7 @@ COM_CONTENT_MENUS_MISC="Modules & Media"
 COM_CONTENT_MENUS_NEW_ADMIN_MODULE="Add Administrator Module"
 COM_CONTENT_MENUS_NEW_ARTICLE="Add Article"
 COM_CONTENT_MENUS_NEW_CATEGORY="Add Category"
+COM_CONTENT_MENUS_NEW_MODULE="Add Module"
 COM_CONTENT_MENUS_NEW_SITE_MODULE="Add Site Module"
 COM_CONTENT_MENUS_PRESET_CONTENT="Preset - Content Dashboard"
 COM_CONTENT_MENUS_WORKFLOW="Workflows"
