--- a/language/en-GB/com_content.ini
+++ b/language/en-GB/com_content.ini
@@ -19,6 +19,7 @@ COM_CONTENT_CONTENT_TYPE_CATEGORY="Article Category"
 COM_CONTENT_CREATE_ARTICLE="Submit new article"
 COM_CONTENT_CREATED_DATE="Created Date"
 COM_CONTENT_CREATED_DATE_ON="Created: %s"
+COM_CONTENT_EDIT_ITEM="Edit Article"
 COM_CONTENT_EDIT_PUBLISHED_ARTICLE="Published Article"
 COM_CONTENT_EDIT_UNPUBLISHED_ARTICLE="Unpublished Article"
 COM_CONTENT_ERROR_ARTICLE_NOT_FOUND="Article not found"
