--- a/language/en-GB/com_contact.ini
+++ b/language/en-GB/com_contact.ini
@@ -23,6 +23,8 @@ COM_CONTACT_DEFAULT_PAGE_TITLE="Contacts"
 COM_CONTACT_DETAILS="Contact"
 COM_CONTACT_DOWNLOAD_INFORMATION_AS="Download information as:"
 COM_CONTACT_EDIT_CONTACT="Edit Contact"
+COM_CONTACT_EDIT_PUBLISHED_CONTACT="Published Contact"
+COM_CONTACT_EDIT_UNPUBLISHED_CONTACT="Unpublished Contact"
 COM_CONTACT_EMAIL_FORM="Contact Form"
 COM_CONTACT_EMAIL_LABEL="Email"
 COM_CONTACT_EMAIL_THANKS="Thank you for your email."
