Changed Control Panel to Home Dasboard in ini files

--- a/administrator/language/en-GB/com_cpanel.ini
+++ b/administrator/language/en-GB/com_cpanel.ini
@@ -6,7 +6,7 @@
 COM_CPANEL="Dashboard"
 COM_CPANEL_ADD_DASHBOARD_MODULE="Add module to the dashboard"
 COM_CPANEL_ADD_MODULE_MODAL_TITLE="Add Module"
-COM_CPANEL_DASHBOARD_BASE_TITLE="Control Panel"
+COM_CPANEL_DASHBOARD_BASE_TITLE="Home Dashboard"
 COM_CPANEL_DASHBOARD_COMPONENTS_TITLE="Components Dashboard"
 COM_CPANEL_DASHBOARD_CONTENT_TITLE="Content Dashboard"
 COM_CPANEL_DASHBOARD_CONTENT_WORKFLOW_TITLE="Content Workflow Dashboard"
@@ -37,4 +37,4 @@ COM_CPANEL_UNPUBLISH_MODULE_ERROR="Error unpublishing the module"
 COM_CPANEL_UNPUBLISH_MODULE_SUCCESS="Module unpublished"
 COM_CPANEL_WELCOME_BEGINNERS_MESSAGE="<p>Community resources are available for new users.</p><ul><li><a href=\"https://docs.joomla.org/Special:MyLanguage/Portal:Beginners\">Joomla! Beginners Guide</a></li><li><a href=\"https://forum.joomla.org/viewforum.php?f=706\">New to Joomla! Forum</a></li></ul>"
 COM_CPANEL_WELCOME_BEGINNERS_TITLE="Welcome to Joomla!"
-COM_CPANEL_XML_DESCRIPTION="Control Panel component"
+COM_CPANEL_XML_DESCRIPTION="Home Dashboardl component"
