--- a/installation/language/hi-IN/hi-IN.ini
+++ b/installation/language/hi-IN/hi-IN.ini
@@ -57,7 +57,7 @@ INSTL_FTP_PASSWORD_LABEL="FTP पासवर्ड"
 INSTL_FTP_PORT_LABEL="FTP पोर्ट"
 INSTL_FTP_ROOT_LABEL="FTP रूट पथ"
 INSTL_FTP_SAVE_LABEL="FTP पासवर्ड सुरक्षित करना"
-INSTL_FTP_TITLE="FTP के कॉन्फ़िगरेशन (<strong> वैकल्पिक class="_QQ_"red"_QQ_"> अधिकांश उपयोगकर्ताओं के इस कदम को छोड़ सकते हैं - अगले प्रेस </strong> छोड़ें)"
+INSTL_FTP_TITLE="FTP के कॉन्फ़िगरेशन (<strong class="_QQ_"red"_QQ_">इच्छाधीन - अधिकांश उपयोगकर्ताओं के इस कदम को छोड़ सकते हैं - अगले प्रेस </strong>)"
 INSTL_FTP_USER_LABEL="FTP उपयोगकर्ता नाम"
 INSTL_SITE_NAME_LABEL="साइट नाम"
 INSTL_VERIFY_FTP_SETTINGS="FTP सेटिंग्स की पुष्टि करें"
