--- a/language/en-GB/tpl_cassiopeia.ini
+++ b/language/en-GB/tpl_cassiopeia.ini
@@ -5,11 +5,9 @@
 
 TPL_CASSIOPEIA_BACKTOTOP="Back to Top"
 TPL_CASSIOPEIA_BACKTOTOP_LABEL="Back-to-top Link"
-TPL_CASSIOPEIA_COLOR_NAME_AUTUMN="Autumn"
+TPL_CASSIOPEIA_COLOR_NAME_ALTERNATIVE="Alternative"
 TPL_CASSIOPEIA_COLOR_NAME_LABEL="Colour Theme"
-TPL_CASSIOPEIA_COLOR_NAME_SPRING="Spring"
-TPL_CASSIOPEIA_COLOR_NAME_SUMMER="Summer"
-TPL_CASSIOPEIA_COLOR_NAME_WINTER="Winter"
+TPL_CASSIOPEIA_COLOR_NAME_STANDARD="Standard"
 TPL_CASSIOPEIA_FLUID="Fluid"
 TPL_CASSIOPEIA_FLUID_LABEL="Fluid Layout"
 TPL_CASSIOPEIA_FONT_GROUP_LOCAL="Fonts from Folder"
