Re-add the banner image, small change in banner text

--- a/administrator/language/en-GB/plg_sampledata_blog.ini
+++ b/administrator/language/en-GB/plg_sampledata_blog.ini
@@ -72,7 +72,7 @@ PLG_SAMPLEDATA_BLOG_SAMPLEDATA_MODULES_MODULE_5_TITLE="Older Posts"
 PLG_SAMPLEDATA_BLOG_SAMPLEDATA_MODULES_MODULE_6_TITLE="Bottom Menu"
 PLG_SAMPLEDATA_BLOG_SAMPLEDATA_MODULES_MODULE_7_TITLE="Search"
 PLG_SAMPLEDATA_BLOG_SAMPLEDATA_MODULES_MODULE_8_TITLE="Image"
-PLG_SAMPLEDATA_BLOG_SAMPLEDATA_MODULES_MODULE_8_CONTENT="<h1 class=\"display-3 text-thin\">Welcome to Joomla on Cassiopeia!</h1><p class=\"lead\">You have chosen one of the most powerful CMS Systems in the world.</p><p class=\"lead\">Cassiopeia is the multi-purpose frontend template for Joomla 4.</p><p><a class=\"btn btn-primary btn-lg\" href=\"index.php\">Learn more »</a></p>"
+PLG_SAMPLEDATA_BLOG_SAMPLEDATA_MODULES_MODULE_8_CONTENT="<h1 class=\"display-3 text-thin\">Welcome to Joomla on Cassiopeia!</h1><p class=\"lead\"><strong>sYou have chosen one of the most powerful CMS Systems in the world.</strong></p><p class=\"lead\">Cassiopeia is the multi-purpose frontend template for Joomla 4.</p><p><a class=\"btn btn-primary btn-lg\" href=\"index.php\">Learn more »</a></p>"
 PLG_SAMPLEDATA_BLOG_SAMPLEDATA_MODULES_MODULE_9_TITLE="Popular Tags"
 PLG_SAMPLEDATA_BLOG_STEP1_SUCCESS="Step 1: Articles done!"
 PLG_SAMPLEDATA_BLOG_STEP2_SUCCESS="Step 2: Menus done!"
