--- a/language/en-GB/com_contact.ini
+++ b/language/en-GB/com_contact.ini
@@ -8,6 +8,7 @@ COM_CONTACT_CAPTCHA_LABEL="Captcha"
 COM_CONTACT_CAT_NUM="# of Contacts :"
 COM_CONTACT_CHECKED_OUT_BY="Checked out by %s"
 COM_CONTACT_CONTACT_DEFAULT_LABEL="Send an Email"
+COM_CONTACT_CONTACT_DETAILS="Details"
 COM_CONTACT_CONTACT_EMAIL_A_COPY_LABEL="Send a copy to yourself"
 COM_CONTACT_CONTACT_EMAIL_NAME_LABEL="Name"
 COM_CONTACT_CONTACT_ENTER_MESSAGE_LABEL="Message"
@@ -81,4 +82,3 @@ COM_CONTACT_TELEPHONE="Phone"
 COM_CONTACT_TELEPHONE_NUMBER="Phone: %s"
 COM_CONTACT_USER_FIELDS="Fields"
 COM_CONTACT_VCARD="vCard"
-COM_CONTACT_WRITTEN_BY="Written by %s"
