[4.0] Missing alerts strings

--- a/administrator/language/en-GB/joomla.ini
+++ b/administrator/language/en-GB/joomla.ini
@@ -67,6 +67,7 @@ JCATEGORY_DESC="Category descending"
 JCATEGORY_SPRINTF="Category: %s"
 JCLEAR="Clear"
 JCLIENT="Location"
+JCLOSE="Close"
 JCONFIG_PERMISSIONS_DESC="Permissions for this component unless they are changed for a specific item."
 JCONFIG_PERMISSIONS_LABEL="Permissions"
 JCURRENT="Current"
@@ -101,8 +102,10 @@ JNEXT_TITLE="Next article: %s"
 JNO="No"
 JNONE="None"
 JOFF="Off"
+JOK="OK"
 JON="On"
 JONLY="Only"
+JOPEN="Open"
 JOPTIONS="Options"
 JORDERINGDISABLED="Please sort by order to enable reordering"
 JPREV="Prev"
