--- a/language/en-GB/joomla.ini
+++ b/language/en-GB/joomla.ini
@@ -66,6 +66,7 @@ JCATEGORY_ASC="Category ascending"
 JCATEGORY_DESC="Category descending"
 JCLEAR="Clear"
 JCLOSE="Close"
+JDATE="Date"
 JDATE_ASC="Date ascending"
 JDATE_DESC="Date descending"
 JDAY="Day"
