--- a/language/en-GB/joomla.ini
+++ b/language/en-GB/joomla.ini
@@ -66,6 +66,7 @@ JCATEGORY="Category"
 JCATEGORY_ASC="Category ascending"
 JCATEGORY_DESC="Category descending"
 JCLEAR="Clear"
+JCLOSE="Close"
 JDATE="Date"
 JDATE_ASC="Date ascending"
 JDATE_DESC="Date descending"
@@ -94,9 +95,11 @@ JNO="No"
 JNONE="None"
 JNOTPUBLISHEDYET="Not published yet"
 JNOTICE="Notice"
+JOK="OK"
 JOFF="Off"
 JOFFLINE_MESSAGE="This site is down for maintenance.<br>Please check back again soon."
 JON="On"
+JOPEN="Open"
 JOPTIONS="Options"
 JPAGETITLE="%1$s - %2$s"
 JPREV="Prev"
