Fixed Admin_Modules:_Frontend_Link in joomla.ini

--- a/administrator/language/en-GB/joomla.ini
+++ b/administrator/language/en-GB/joomla.ini
@@ -791,7 +791,7 @@ JHELP_EXTENSIONS_LANGUAGE_MANAGER_OVERRIDES_EDIT="Languages:_Edit_Override"
 JHELP_EXTENSIONS_MODULE_MANAGER="Modules"
 JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_CUSTOM="Admin_Modules:_Custom"
 JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_FEED="Admin_Modules:_Feed_Display"
-JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_FRONTEND="Extensions_Module_Manager_Admin_Frontend_Link"
+JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_FRONTEND="Admin_Modules:_Frontend_Link"
 JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_LATEST="Admin_Modules:_Articles_-_Latest"
 JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_LATESTACTIONS="Admin_Modules:_Action_Logs_-_Latest"
 JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_LOGGED="Admin_Modules:_Logged-in_Users"
