Changed JHelp module admin strings to new file names

--- a/administrator/language/en-GB/joomla.ini
+++ b/administrator/language/en-GB/joomla.ini
@@ -796,19 +796,19 @@ JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_LATEST="Admin_Modules:_Articles_-_Latest"
 JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_LATESTACTIONS="Admin_Modules:_Action_Logs_-_Latest"
 JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_LOGGED="Admin_Modules:_Logged-in_Users"
 JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_LOGIN="Admin_Modules:_Login_Form"
-JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_LOGIN_SUPPORT="Extensions_Module_Manager_Admin_Login_Support"
+JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_LOGIN_SUPPORT="Admin_Modules:_Login_Support_Information"
 JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_MENU="Admin_Modules:_Administrator_Menu"
-JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_MESSAGES="Extensions_Module_Manager_Admin_Messages"
+JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_MESSAGES="Admin_Modules:_Messages"
 JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_MULTILANG="Admin_Modules:_Multilingual_Status"
 JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_POPULAR="Admin_Modules:_Popular_Articles"
-JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_POST_INSTALLATION_MESSAGES="Extensions_Module_Manager_Admin_Post_Installation_Messages"
+JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_POST_INSTALLATION_MESSAGES="Admin_Modules:_Post_Installation_Messages"
 JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_PRIVACY_DASHBOARD="Admin_Modules:_Privacy_Dashboard"
 JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_QUICKICON="Admin_Modules:_Quick_Icons"
-JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_STATUS_USER="Extensions_Module_Manager_Admin_Status_User"
+JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_STATUS_USER="Admin_Modules:_User_Menu"
 JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_SUBMENU="Admin_Modules:_Administrator_Dashboard_Menu"
 JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_TITLE="Admin_Modules:_Title"
 JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_TOOLBAR="Admin_Modules:_Toolbar"
-JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_VERSION="Extensions_Module_Manager_Admin_Version"
+JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_VERSION="Admin_Modules:_Joomla_Version_Information"
 JHELP_EXTENSIONS_MODULE_MANAGER_ARTICLES_ARCHIVE="Site_Modules:_Articles_-_Archived"
 JHELP_EXTENSIONS_MODULE_MANAGER_ARTICLES_CATEGORIES="Site_Modules:_Articles_-_Categories"
 JHELP_EXTENSIONS_MODULE_MANAGER_ARTICLES_CATEGORY="Site_Modules:_Articles_-_Category"
