--- a/language/en-GB/tpl_cassiopeia.ini
+++ b/language/en-GB/tpl_cassiopeia.ini
@@ -7,7 +7,7 @@ CASSIOPEIA="Cassiopeia Site template"
 TPL_CASSIOPEIA_BACKTOTOP="Back to Top"
 TPL_CASSIOPEIA_BACKTOTOP_LABEL="Back-to-top Link"
 TPL_CASSIOPEIA_FLUID="Fluid"
-TPL_CASSIOPEIA_FLUID_LABEL="Fluid Layout"
+TPL_CASSIOPEIA_FLUID_LABEL="Layout"
 TPL_CASSIOPEIA_LOGO_LABEL="Logo"
 TPL_CASSIOPEIA_STATIC="Static"
 TPL_CASSIOPEIA_STICKY_LABEL="Sticky Header"
