--- a/language/en-GB/joomla.ini
+++ b/language/en-GB/joomla.ini
@@ -182,6 +182,9 @@ JFIELD_COLOR_VALUE="Colour with hexadecimal value of"
 JFIELD_FIELDS_CATEGORY_DESC="Select the category that this field is assigned to."
 JFIELD_LANGUAGE_DESC="Assign a language to this article."
 JFIELD_LANGUAGE_LABEL="Language"
+JFIELD_MEDIA_ALT_LABEL="Alternative text"
+JFIELD_MEDIA_CONFIRM_TEXT="Confirm"
+JFIELD_MEDIA_LAZY_LABEL="Image will be lazyloaded"
 ; Do not translate the text between the {}
 JFIELD_META_DESCRIPTION_COUNTER="{remaining} characters remaining of {maxlength} characters."
 JFIELD_META_DESCRIPTION_DESC="Metadata description."
