--- a/administrator/language/en-GB/joomla.ini
+++ b/administrator/language/en-GB/joomla.ini
@@ -241,7 +241,7 @@ JFIELD_LOGOUT_REDIRECT_PAGE_DESC="Select or create the page the user will be red
 JFIELD_LOGOUT_REDIRECT_PAGE_LABEL="Logout Redirection Page"
 JFIELD_LOGOUT_REDIRECT_URL_DESC="If a URL is entered here, users will be redirected to it after logout.<br>The URL must be internal (eg: index.php?Itemid=999)."
 JFIELD_LOGOUT_REDIRECT_URL_LABEL="Logout Redirect"
-JFIELD_MEDIA_ALT_LABEL="Alternative text"
+JFIELD_MEDIA_ALT_LABEL="Alt Text"
 JFIELD_MEDIA_CONFIRM_TEXT="Confirm"
 JFIELD_MEDIA_LAZY_LABEL="Image will be lazyloaded"
 ; Do not translate the text between the {}
