--- a/language/en-GB/en-GB.com_users.ini
+++ b/language/en-GB/en-GB.com_users.ini
@@ -30,6 +30,8 @@ COM_USERS_ERROR_SECRET_CODE_WITHOUT_TFA="You have entered a Secret Code but two 
 COM_USERS_FIELD_PASSWORD_RESET_DESC="Please enter the email address associated with your User account.<br />A verification code will be sent to you. Once you have received the verification code, you will be able to choose a new password for your account."
 COM_USERS_FIELD_PASSWORD_RESET_LABEL="Email Address"
 COM_USERS_FIELD_REMIND_EMAIL_DESC="Please enter the email address associated with your User account.<br />Your username will be emailed to the email address on file."
+COM_USERS_REMIND_REQUEST="If the email address was correct a reminder has been sent. Please check your mail."
+COM_USERS_RESET_REQUEST="If the email address was correct a new password has been sent. Please check your mail."
 COM_USERS_FIELD_REMIND_EMAIL_LABEL="Email Address"
 COM_USERS_FIELD_RESET_CONFIRM_TOKEN_DESC="Enter the password reset verification code you received by email."
 COM_USERS_FIELD_RESET_CONFIRM_TOKEN_LABEL="Verification Code"
@@ -138,6 +140,7 @@ COM_USERS_REMIND_DEFAULT_LABEL="Please enter the email address associated with y
 COM_USERS_REMIND_EMAIL_LABEL="Your Email"
 COM_USERS_REMIND_LIMIT_ERROR_N_HOURS="You have exceeded the maximum number of password resets allowed. Please try again in %s hours."
 COM_USERS_REMIND_LIMIT_ERROR_N_HOURS_1="You have exceeded the maximum number of password resets allowed. Please try again in one hour."
+COM_USERS_REMIND_REQUEST="If the email address you entered is registered on this site you will shortly receive an email with a reminder has been send."
 COM_USERS_REMIND_REQUEST_ERROR="Error requesting password reminder."
 COM_USERS_REMIND_REQUEST_FAILED="Reminder failed: %s"
 COM_USERS_REMIND_REQUEST_SUCCESS="Reminder sent. Please check your mail."
@@ -151,6 +154,7 @@ COM_USERS_RESET_CONFIRM_ERROR="Error while confirming the password."
 COM_USERS_RESET_CONFIRM_FAILED="Your password reset confirmation failed because the verification code was invalid. %s"
 COM_USERS_RESET_CONFIRM_LABEL="An email has been sent to your email address. The email has a verification code, please paste the verification code in the field below to prove that you are the owner of this account."
 COM_USERS_RESET_COMPLETE_TOKENS_MISSING="Your password reset confirmation failed because the verification code was missing."
+COM_USERS_RESET_REQUEST="If the email address you entered is registered on this site you will shortly receive an email with a link to create a password for your account."
 COM_USERS_RESET_REQUEST_ERROR="Error requesting password reset."
 COM_USERS_RESET_REQUEST_FAILED="Reset password failed: %s"
 COM_USERS_RESET_REQUEST_LABEL="Please enter the email address for your account. A verification code will be sent to you. Once you have received the verification code, you will be able to choose a new password for your account."
