--- a/language/en-GB/en-GB.com_users.ini
+++ b/language/en-GB/en-GB.com_users.ini
@@ -144,7 +144,8 @@ COM_USERS_REMIND_REQUEST="If the email address you entered is registered on this
 COM_USERS_REMIND_REQUEST_ERROR="Error requesting password reminder."
 COM_USERS_REMIND_REQUEST_FAILED="Reminder failed: %s"
 COM_USERS_REMIND_REQUEST_SUCCESS="Reminder sent. Please check your mail."
-COM_USERS_REMIND_SUPERADMIN_ERROR="A Super User can't request a password reminder. Please contact another Super User or use an alternative method."
+COM_USERS_REMIND_SUPERADMIN_BODY="Hello,\n\na request has been made to reset your %s account password. But, for security reasons, a Super User can't request a password reminder. Please contact another Super User or use an alternative method as described in the documentation: https://docs.joomla.org/Special:MyLanguage/How_do_you_recover_or_reset_your_admin_password%3F"
+COM_USERS_REMIND_SUPERADMIN_ERROR="A Super User can't request a password reminder. Please contact another Super User or use an <a href='https://docs.joomla.org/Special:MyLanguage/How_do_you_recover_or_reset_your_admin_password%3F' target='_blank' rel='noopener noreferrer'>alternative method as described in the documentation</a>."
 COM_USERS_RESET="Password Reset"
 COM_USERS_RESET_COMPLETE_ERROR="Error completing password reset."
 COM_USERS_RESET_COMPLETE_FAILED="Completing reset password failed: %s"
