--- a/language/en-GB/en-GB.com_users.ini
+++ b/language/en-GB/en-GB.com_users.ini
@@ -140,7 +140,7 @@ COM_USERS_REMIND_DEFAULT_LABEL="Please enter the email address associated with y
 COM_USERS_REMIND_EMAIL_LABEL="Your Email"
 COM_USERS_REMIND_LIMIT_ERROR_N_HOURS="You have exceeded the maximum number of password resets allowed. Please try again in %s hours."
 COM_USERS_REMIND_LIMIT_ERROR_N_HOURS_1="You have exceeded the maximum number of password resets allowed. Please try again in one hour."
-COM_USERS_REMIND_REQUEST="If the email address you entered is registered on this site you will shortly receive an email with a reminder has been send."
+COM_USERS_REMIND_REQUEST="If the email address you entered is registered on this site you will shortly receive an email with a reminder."
 COM_USERS_REMIND_REQUEST_ERROR="Error requesting password reminder."
 COM_USERS_REMIND_REQUEST_FAILED="Reminder failed: %s"
 COM_USERS_REMIND_REQUEST_SUCCESS="Reminder sent. Please check your mail."
