--- a/administrator/language/en-GB/joomla.ini
+++ b/administrator/language/en-GB/joomla.ini
@@ -519,8 +519,8 @@ JGLOBAL_NEWITEMSLAST_DESC="New items default to the last position. The ordering 
 JGLOBAL_NO_ITEM_SELECTED="No items selected"
 JGLOBAL_NO_MATCHING_RESULTS="No Matching Results"
 JGLOBAL_NO_ORDER="No Order"
-JGLOBAL_NOINDEX_FOLLOW="No index, follow"
-JGLOBAL_NOINDEX_NOFOLLOW="No index, no follow"
+JGLOBAL_NOINDEX_FOLLOW="noindex, follow"
+JGLOBAL_NOINDEX_NOFOLLOW="noindex, nofollow"
 JGLOBAL_NONAPPLICABLE="N/A"
 JGLOBAL_NUM_INTRO_ARTICLES_DESC="Number of articles to show after the leading article. Articles will be shown in columns."
 JGLOBAL_NUM_INTRO_ARTICLES_LABEL="# Intro Articles"
