--- a/administrator/language/en-GB/joomla.ini
+++ b/administrator/language/en-GB/joomla.ini
@@ -462,8 +462,8 @@ JGLOBAL_HISTORY_LIMIT_OPTIONS_LABEL="Maximum Versions"
 JGLOBAL_HITS="Hits"
 JGLOBAL_HITS_ASC="Hits ascending"
 JGLOBAL_HITS_DESC="Hits descending"
-JGLOBAL_INDEX_FOLLOW="Index, Follow"
-JGLOBAL_INDEX_NOFOLLOW="Index, No follow"
+JGLOBAL_INDEX_FOLLOW="index, follow"
+JGLOBAL_INDEX_NOFOLLOW="index, nofollow"
 JGLOBAL_INHERIT="Inherit"
 JGLOBAL_INTEGRATION_LABEL="Integration"
 JGLOBAL_INTRO_TEXT="Intro Text"
