--- a/administrator/language/en-GB/joomla.ini
+++ b/administrator/language/en-GB/joomla.ini
@@ -479,6 +479,7 @@ JGLOBAL_LINK_CATEGORY_DESC="If set to Yes, and if Show Category is set to 'Show'
 JGLOBAL_LINK_CATEGORY_LABEL="Link Category"
 JGLOBAL_LINK_PARENT_CATEGORY_DESC="If set to Yes, and if Show Parent is set to 'Show', the Parent Category Title will link to a layout showing articles in that Category."
 JGLOBAL_LINK_PARENT_CATEGORY_LABEL="Link Parent"
+JGLOBAL_LINKED_INTRO_IMAGE_LABEL="Linked Intro Image"
 JGLOBAL_LINKED_TITLES_DESC="If set to Yes, the article title will be a link to the article."
 JGLOBAL_LINKED_TITLES_LABEL="Linked Titles"
 JGLOBAL_LIST="List"
