--- a/language/en-GB/com_users.ini
+++ b/language/en-GB/com_users.ini
@@ -31,6 +31,8 @@ COM_USERS_FIELD_RESET_CONFIRM_USERNAME_LABEL="Username"
 COM_USERS_FIELD_RESET_PASSWORD1_LABEL="Password"
 COM_USERS_FIELD_RESET_PASSWORD1_MESSAGE="The passwords you entered do not match. Please enter your desired password in the password field and confirm your entry by entering it in the confirm password field."
 COM_USERS_FIELD_RESET_PASSWORD2_LABEL="Confirm Password"
+COM_USERS_FRONTEND_LOGIN_SUCCESS="You have been successfully logged in."
+COM_USERS_FRONTEND_LOGOUT_SUCCESS="You have been successfully logged out."
 COM_USERS_INVALID_EMAIL="Invalid email address"
 COM_USERS_LOGIN_DEFAULT_LABEL="User Login"
 COM_USERS_LOGIN_IMAGE_ALT="Login image"
