--- a/language/en-GB/com_contact.ini
+++ b/language/en-GB/com_contact.ini
@@ -10,7 +10,6 @@ COM_CONTACT_CHECKED_OUT_BY="Checked out by %s"
 COM_CONTACT_CONTACT_DEFAULT_LABEL="Send an Email"
 COM_CONTACT_CONTACT_DETAILS="Details"
 COM_CONTACT_CONTACT_EMAIL_A_COPY_LABEL="Send a copy to yourself"
-COM_CONTACT_CONTACT_EMAIL_NAME_LABEL="Name"
 COM_CONTACT_CONTACT_ENTER_MESSAGE_LABEL="Message"
 COM_CONTACT_CONTACT_MESSAGE_SUBJECT_LABEL="Subject"
 COM_CONTACT_CONTACT_REQUIRED="<strong class=\"red\">*</strong> Required field"
@@ -59,7 +58,7 @@ COM_CONTACT_FIELDSET_METADATA="Metadata"
 COM_CONTACT_FIELDSET_MISCELLANEOUS="Miscellaneous Information"
 COM_CONTACT_FIELDSET_PUBLISHING="Publishing"
 COM_CONTACT_FILTER_LABEL="Filter Field"
-COM_CONTACT_FILTER_SEARCH_DESC="Contact Filter Search"
+COM_CONTACT_FILTER_SEARCH_DESC="Search by Contact Title"
 COM_CONTACT_FORM_EDIT_CONTACT="Edit a contact"
 COM_CONTACT_FORM_FILTER_LEGEND="Filters"
 COM_CONTACT_FORM_LABEL="Send an Email. All fields with an asterisk (*) are required."
