string used in form

--- a/language/en-GB/com_contact.ini
+++ b/language/en-GB/com_contact.ini
@@ -10,6 +10,7 @@ COM_CONTACT_CHECKED_OUT_BY="Checked out by %s"
 COM_CONTACT_CONTACT_DEFAULT_LABEL="Send an Email"
 COM_CONTACT_CONTACT_DETAILS="Details"
 COM_CONTACT_CONTACT_EMAIL_A_COPY_LABEL="Send a copy to yourself"
+COM_CONTACT_CONTACT_EMAIL_NAME_LABEL="Name"
 COM_CONTACT_CONTACT_ENTER_MESSAGE_LABEL="Message"
 COM_CONTACT_CONTACT_MESSAGE_SUBJECT_LABEL="Subject"
 COM_CONTACT_CONTACT_REQUIRED="<strong class=\"red\">*</strong> Required field"
