--- a/administrator/language/en-GB/joomla.ini
+++ b/administrator/language/en-GB/joomla.ini
@@ -260,8 +260,8 @@ JFIELD_NAME_LABEL="Name"
 JFIELD_NAME_PLACEHOLDER="Auto-generate from title"
 JFIELD_NOTE_DESC="Note"
 JFIELD_NOTE_LABEL="Note"
-JFIELD_NUMBER_TOO_LONG_N="Number is too large, must be less than %s."
-JFIELD_NUMBER_TOO_SHORT_N="Number is too small, must be more than %s."
+JFIELD_NUMBER_TOO_LONG_N="%2$s: Number is too large, must be less than %1$s."
+JFIELD_NUMBER_TOO_SHORT_N="%2$s: Number is too small, must be greater than %1$s."
 JFIELD_OPTION_NONE="None"
 JFIELD_ORDERING_DESC="Select the ordering."
 JFIELD_ORDERING_LABEL="Ordering"
