--- a/language/en-GB/joomla.ini
+++ b/language/en-GB/joomla.ini
@@ -190,8 +190,8 @@ JFIELD_META_KEYWORDS_DESC="Keywords describing the content."
 JFIELD_META_KEYWORDS_LABEL="Keywords"
 JFIELD_META_RIGHTS_DESC="Describe what rights others have to use this content."
 JFIELD_META_RIGHTS_LABEL="Content Rights"
-JFIELD_NUMBER_TOO_LONG_N="Number is too large, must be less than %s."
-JFIELD_NUMBER_TOO_SHORT_N="Number is too small, must be more than %s."
+JFIELD_NUMBER_TOO_LONG_N="%2$s: Number is too large, must be less than %1$s."
+JFIELD_NUMBER_TOO_SHORT_N="%2$s: Number is too small, must be greater than %1$s."
 JFIELD_ORDERING_DESC="Ordering of the article within the category."
 JFIELD_ORDERING_LABEL="Ordering"
 JFIELD_PASSWORD_INDICATE_COMPLETE="Password accepted"
