--- a/administrator/language/en-GB/joomla.ini
+++ b/administrator/language/en-GB/joomla.ini
@@ -352,8 +352,16 @@ JGLOBAL_BATCH_MOVE_ROW_NOT_FOUND="Can't find the destination row for this move."
 JGLOBAL_BATCH_PROCESS="Process"
 JGLOBAL_BATCH_WORKFLOW_STATE_ROW_NOT_FOUND="Can't find the destination row for this state change."
 JGLOBAL_BLOG="Blog"
-JGLOBAL_BLOG_CLASS="Blog Class"
+JGLOBAL_BLOG_CLASS_BOXED="Boxed Layout"
+JGLOBAL_BLOG_CLASS_COLUMNS="Number of Columns"
+JGLOBAL_BLOG_CLASS_HELP="Blog Class Default Classes"
+JGLOBAL_BLOG_CLASS_IMAGE="Image Alingment"
+JGLOBAL_BLOG_IMAGE_ALTERNATE="Alternate"
+JGLOBAL_BLOG_IMAGE_LEFT="Left"
+JGLOBAL_BLOG_IMAGE_RIGHT="Alternate"
+JGLOBAL_BLOG_CLASS_INTRO="Blog Class (Intro Articles)"
 JGLOBAL_BLOG_CLASS_LEADING="Blog Class (Leading Articles)"
+JGLOBAL_BLOG_CLASS_MASONRY="Masonry Layout"
 JGLOBAL_BLOG_LAYOUT_OPTIONS="Blog Layout"
 JGLOBAL_CATEGORIES_OPTIONS="Categories"
 JGLOBAL_CATEGORY_LAYOUT_DESC="Layout"
