Chances as suggested

--- a/administrator/language/en-GB/joomla.ini
+++ b/administrator/language/en-GB/joomla.ini
@@ -355,13 +355,15 @@ JGLOBAL_BLOG="Blog"
 JGLOBAL_BLOG_CLASS_BOXED="Boxed Layout"
 JGLOBAL_BLOG_CLASS_COLUMNS="Number of Columns"
 JGLOBAL_BLOG_CLASS_HELP="Blog Class Default Classes"
-JGLOBAL_BLOG_CLASS_IMAGE="Image Alingment"
+JGLOBAL_BLOG_CLASS_IMAGE="Image Alignment"
 JGLOBAL_BLOG_IMAGE_ALTERNATE="Alternate"
 JGLOBAL_BLOG_IMAGE_LEFT="Left"
-JGLOBAL_BLOG_IMAGE_RIGHT="Alternate"
+JGLOBAL_BLOG_IMAGE_RIGHT="Right"
 JGLOBAL_BLOG_CLASS_INTRO="Blog Class (Intro Articles)"
 JGLOBAL_BLOG_CLASS_LEADING="Blog Class (Leading Articles)"
-JGLOBAL_BLOG_CLASS_MASONRY="Masonry Layout"
+JGLOBAL_BLOG_CLASS_TYPE="Layout Type"
+JGLOBAL_BLOG_CLASS_TYPE_COLUMNS="Columns"
+JGLOBAL_BLOG_CLASS_TYPE_MASONRY="Masonry"
 JGLOBAL_BLOG_LAYOUT_OPTIONS="Blog Layout"
 JGLOBAL_CATEGORIES_OPTIONS="Categories"
 JGLOBAL_CATEGORY_LAYOUT_DESC="Layout"
@@ -487,6 +489,7 @@ JGLOBAL_LINK_CATEGORY_DESC="If set to Yes, and if Show Category is set to 'Show'
 JGLOBAL_LINK_CATEGORY_LABEL="Link Category"
 JGLOBAL_LINK_PARENT_CATEGORY_DESC="If set to Yes, and if Show Parent is set to 'Show', the Parent Category Title will link to a layout showing articles in that Category."
 JGLOBAL_LINK_PARENT_CATEGORY_LABEL="Link Parent"
+JGLOBAL_LINKED_INTRO_IMAGE_LABEL="Linked Intro Image"
 JGLOBAL_LINKED_TITLES_DESC="If set to Yes, the article title will be a link to the article."
 JGLOBAL_LINKED_TITLES_LABEL="Linked Titles"
 JGLOBAL_LIST="List"
