--- a/administrator/language/en-GB/plg_editors_tinymce.ini
+++ b/administrator/language/en-GB/plg_editors_tinymce.ini
@@ -8,6 +8,9 @@ PLG_TINY_BUILDER="TinyMCE Configuration Builder"
 PLG_TINY_BUTTON_TOGGLE_EDITOR="Toggle Editor"
 PLG_TINY_CONFIG_TEXTFILTER_ACL_LABEL="Use Joomla Text Filter"
 PLG_TINY_CORE_BUTTONS="CMS Content"
+PLG_TINY_DND_ADDITIONALDATA="Additional Data"
+PLG_TINY_DND_ALTTEXT="Alt Text"
+PLG_TINY_DND_LAZYLOADED="Image will be lazyloaded"
 PLG_TINY_ERR_CUSTOMCSSFILENOTPRESENT="The file name %s was entered in the TinyMCE Custom CSS field. This file could not be found in the default template folder. No styles are available."
 PLG_TINY_ERR_EDITORCSSFILENOTPRESENT="Could not find the file 'editor.css' in the template or templates/system folder. No styles are available."
 PLG_TINY_ERR_UNSUPPORTEDBROWSER="Drag and drop image upload is not available for your browser. Please consider using a fully HTML5 compatible browser."
