Add Icon Webpage to contact config

--- a/administrator/language/en-GB/com_contact.ini
+++ b/administrator/language/en-GB/com_contact.ini
@@ -60,6 +60,7 @@ COM_CONTACT_FIELD_ICONS_MISC_LABEL="Custom Misc Icon"
 COM_CONTACT_FIELD_ICONS_MOBILE_LABEL="Custom Mobile Icon"
 COM_CONTACT_FIELD_ICONS_SETTINGS_LABEL="Settings"
 COM_CONTACT_FIELD_ICONS_TELEPHONE_LABEL="Custom Telephone Icon"
+COM_CONTACT_FIELD_ICONS_WEBPAGE_LABEL="Custom Webpage Icon"
 COM_CONTACT_FIELD_INFORMATION_ADDRESS_LABEL="Address"
 COM_CONTACT_FIELD_INFORMATION_COUNTRY_LABEL="Country"
 COM_CONTACT_FIELD_INFORMATION_FAX_LABEL="Fax"
