--- a/administrator/language/en-GB/com_content.ini
+++ b/administrator/language/en-GB/com_content.ini
@@ -94,9 +94,9 @@ COM_CONTENT_FILTER_FEATURED_NO="Unfeatured Articles"
 COM_CONTENT_FILTER_FEATURED_YES="Featured Articles"
 COM_CONTENT_FILTER_SEARCH_DESC="Search in title, alias and note. Prefix with ID: or AUTHOR: or CONTENT: to search for an article ID, article author or search in article content."
 COM_CONTENT_FILTER_SEARCH_LABEL="Search Articles"
-COM_CONTENT_FLOAT_FULLTEXT_LABEL="Full Text Image Float"
-COM_CONTENT_FLOAT_INTRO_LABEL="Intro Image Float"
-COM_CONTENT_FLOAT_LABEL="Image Float"
+COM_CONTENT_IMAGE_INTRO_CLASS_LABEL="Intro Image Class"
+COM_CONTENT_IMAGE_FULLTEXT_CLASS_LABEL="Full Text Image Class"
+COM_CONTENT_FIELD_IMAGE_CLASS_LABEL="Image Class"
 COM_CONTENT_HEADING_ASSOCIATION="Association"
 COM_CONTENT_HEADING_DATE_CREATED="Date Created"
 COM_CONTENT_HEADING_DATE_MODIFIED="Date Modified"
