--- a/administrator/language/en-GB/mod_login.ini
+++ b/administrator/language/en-GB/mod_login.ini
@@ -9,3 +9,4 @@ MOD_LOGIN_CREDENTIALS_LINK="https://docs.joomla.org/Special:MyLanguage/How_do_yo
 MOD_LOGIN_LANGUAGE="Language"
 MOD_LOGIN_LOGIN_TITLE="Administrator Log In"
 MOD_LOGIN_XML_DESCRIPTION="This module displays a username and password login form. It should not be unpublished."
+MOD_LOGIN_AJAX_RESPONSE_CORRUPTED="Server response is corrupted, please try to reload the page."
