Added Mail template Help strings (#31054)

--- a/administrator/language/en-GB/joomla.ini
+++ b/administrator/language/en-GB/joomla.ini
@@ -715,6 +715,7 @@ JHELP_COMPONENTS_COM_FINDER_OPTIONS="Smart_Search:_Options"
 JHELP_COMPONENTS_COM_INSTALLER_OPTIONS="Installer:_Options"
 JHELP_COMPONENTS_COM_JOOMLAUPDATE_OPTIONS="Joomla_Update:_Options"
 JHELP_COMPONENTS_COM_LANGUAGES_OPTIONS="Languages:_Options"
+JHELP_COMPONENTS_COM_MAILS_OPTIONS="Mail_Templates:_Options"
 JHELP_COMPONENTS_COM_MEDIA_OPTIONS="Media:_Options"
 JHELP_COMPONENTS_COM_MENUS_OPTIONS="Menus:_Options"
 JHELP_COMPONENTS_COM_MESSAGES_OPTIONS="Messages:_Options"
@@ -747,6 +748,8 @@ JHELP_COMPONENTS_FINDER_MANAGE_SEARCH_FILTERS_EDIT="Smart_Search:_New_or_Edit_Fi
 JHELP_COMPONENTS_FINDER_MANAGE_SEARCHES="Smart_Search:_Search_Term_Analysis"
 JHELP_COMPONENTS_INSTALLER_UPDATESITE_EDIT="Edit_Update_Site"
 JHELP_COMPONENTS_JOOMLA_UPDATE="Joomla_Update"
+JHELP_COMPONENTS_MAILS_TEMPLATES="Mail_Templates"
+JHELP_COMPONENTS_MAILS_TEMPLATE_EDIT="Mail_Template:_Edit"
 JHELP_COMPONENTS_MESSAGING_INBOX="Private_Messages"
 JHELP_COMPONENTS_MESSAGING_READ="Private_Messages:_Read"
 JHELP_COMPONENTS_MESSAGING_WRITE="Private_Messages:_Write"
