silly icon code

--- a/administrator/language/en-GB/plg_editors-xtd_achecker.sys.ini
+++ b/administrator/language/en-GB/plg_editors-xtd_achecker.sys.ini
@@ -3,5 +3,5 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-PLG_EDITORS-XTD_ACHECKER="Button - Page Break"
+PLG_EDITORS-XTD_ACHECKER="Button - Accessibility Check"
 PLG_EDITORS-XTD_ACHECKER_XML_DESCRIPTION="Provides a button to enable an accessibility check for the content."
