--- a/administrator/language/en-GB/plg_system_achecker.sys.ini
+++ b/administrator/language/en-GB/plg_system_achecker.sys.ini
@@ -3,5 +3,5 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-PLG_SYSTEM_ACCESSIBILITY="System - Additional Accessibility Features"
-PLG_SYSTEM_ACCESSIBILITY_XML_DESCRIPTION="This plugin adds an accessibility toolbar to your site with additional accessibility options."
+PLG_SYSTEM_ACHECKER="System - Accessibility Checker"
+PLG_SYSTEM_ACHECKER_XML_DESCRIPTION="This plugin adds the ability to perform an accessibility check on your site."
