first draft - module

--- a/administrator/language/en-GB/plg_system_achecker.sys.ini
+++ b/administrator/language/en-GB/plg_system_achecker.sys.ini
@@ -4,4 +4,4 @@
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_SYSTEM_ACHECKER="System - Accessibility Checker"
-PLG_SYSTEM_ACHECKER_XML_DESCRIPTION="This plugin adds the ability to perform an accessibility check on your site."
+PLG_SYSTEM_ACHECKER_XML_DESCRIPTION="This plugin adds the ability to perform an accessibility check on a page of your site."
