--- a/administrator/language/en-GB/plg_content_vote.ini
+++ b/administrator/language/en-GB/plg_content_vote.ini
@@ -11,7 +11,7 @@ PLG_VOTE_RATE="Rate"
 PLG_VOTE_STAR_ACTIVE="Star Active"
 PLG_VOTE_STAR_ACTIVE_HALF="Star Active Half"
 PLG_VOTE_STAR_INACTIVE="Star Inactive"
-PLG_VOTE_STAR_RATING="Rating: %.1f out of 5 stars."
+PLG_VOTE_STAR_RATING="Rating: %.1f out of 5 stars"
 PLG_VOTE_TOP="Top"
 PLG_VOTE_USER_RATING="User Rating:&#160;%1$s&#160;/&#160;%2$s"
 PLG_VOTE_VOTE="Vote %s"
