[4.0] missing upper case table

--- a/administrator/language/en-GB/com_installer.ini
+++ b/administrator/language/en-GB/com_installer.ini
@@ -252,7 +252,7 @@ COM_INSTALLER_UPDATE_FILTER_SEARCH_DESC="Search in extension name. Prefix with I
 COM_INSTALLER_UPDATE_FILTER_SEARCH_LABEL="Search Extensions with Updates"
 COM_INSTALLER_UPDATE_MISSING_DOWNLOADKEY_LABEL_N="%d extension updates cannot be installed until you <a href=\"%s\">enter their corresponding Download Keys</a>."
 COM_INSTALLER_UPDATE_MISSING_DOWNLOADKEY_LABEL_N_1="One extension update cannot be installed until you <a href=\"%2$s\">enter its Download Key</a>."
-COM_INSTALLER_UPDATE_TABLE_CAPTION="table of Extensions with Updates"
+COM_INSTALLER_UPDATE_TABLE_CAPTION="Table of Extensions with Updates"
 COM_INSTALLER_UPDATESITE_DISABLE="Disable update site"
 COM_INSTALLER_UPDATESITE_DISABLED="Disabled update site"
 COM_INSTALLER_UPDATESITE_EDIT_TIP="Edit the Update Site '%1s' for '%2s'"
