--- a/installation/language/en-GB/joomla.ini
+++ b/installation/language/en-GB/joomla.ini
@@ -286,11 +286,11 @@ JLIB_FORM_FIELD_REQUIRED_VALUE="Please fill in this field."
 
 ; Installation progress modal
 INSTL_PROGRESS_MODAL="Installation Progress"
-INSTL_PROGRESS_STEP_DBCHECK="Check DB credentials"
-INSTL_PROGRESS_STEP_CREATE="Check system configuration"
-INSTL_PROGRESS_STEP_POPULATE1="Install basic database tables"
-INSTL_PROGRESS_STEP_POPULATE2="Install support database tables"
-INSTL_PROGRESS_STEP_POPULATE3="Install extensions tables"
-INSTL_PROGRESS_STEP_CUSTOM1="Install localisations"
-INSTL_PROGRESS_STEP_CUSTOM2="Install customisations"
+INSTL_PROGRESS_STEP_DBCHECK="Checking DB credentials"
+INSTL_PROGRESS_STEP_CREATE="Checking system configuration"
+INSTL_PROGRESS_STEP_POPULATE1="Installing basic database tables"
+INSTL_PROGRESS_STEP_POPULATE2="Installing support database tables"
+INSTL_PROGRESS_STEP_POPULATE3="Installing extensions tables"
+INSTL_PROGRESS_STEP_CUSTOM1="Installing localisations"
+INSTL_PROGRESS_STEP_CUSTOM2="Installing customisations"
 INSTL_PROGRESS_STEP_CONFIG="Saving configuration and clean-up"
