--- a/installation/language/en-GB/joomla.ini
+++ b/installation/language/en-GB/joomla.ini
@@ -293,4 +293,4 @@ INSTL_PROGRESS_STEP_POPULATE2="Installing support database tables"
 INSTL_PROGRESS_STEP_POPULATE3="Installing extensions tables"
 INSTL_PROGRESS_STEP_CUSTOM1="Installing localisations"
 INSTL_PROGRESS_STEP_CUSTOM2="Installing customisations"
-INSTL_PROGRESS_STEP_CONFIG="Saving configuration and clean-up"
+INSTL_PROGRESS_STEP_CONFIG="Saving configuration and cleaning up"
