--- a/language/en-GB/com_content.ini
+++ b/language/en-GB/com_content.ini
@@ -87,4 +87,4 @@ COM_CONTENT_TRANSITION="Transition"
 COM_CONTENT_VOTES="Vote"
 COM_CONTENT_VOTES_COUNT="Vote: %s"
 COM_CONTENT_WORKFLOW="Workflow"
-COM_CONTENT_WRITTEN_BY="Written by %s"
+COM_CONTENT_WRITTEN_BY="Written by: %s"
