--- a/administrator/language/en-GB/lib_joomla.ini
+++ b/administrator/language/en-GB/lib_joomla.ini
@@ -502,7 +502,8 @@ JLIB_HTML_FEATURED_ITEM="Featured."
 JLIB_HTML_FEATURED_PENDING_ITEM="Featured, but is Pending."
 JLIB_HTML_FEATURED_STARTED="Start: %s"
 JLIB_HTML_GOTO_PAGE="Go to page %s"
-JLIB_HTML_GOTO_POSITION="Go to %s page"
+JLIB_HTML_GOTO_POSITION="Go to %s page."
+JLIB_HTML_ICONS_NO_ICON="No icon provided
 JLIB_HTML_MOVE_DOWN="Move Down"
 JLIB_HTML_MOVE_UP="Move Up"
 JLIB_HTML_NO_PARAMETERS_FOR_THIS_ITEM="There are no parameters for this item."
