Added Help changes to api

--- a/api/language/en-GB/joomla.ini
+++ b/api/language/en-GB/joomla.ini
@@ -787,7 +787,9 @@ JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_MULTILANG="Admin_Modules:_Multilingual_Sta
 JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_POPULAR="Admin_Modules:_Popular_Articles"
 JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_POST_INSTALLATION_MESSAGES="Admin_Modules:_Post_Installation_Messages"
 JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_PRIVACY_DASHBOARD="Admin_Modules:_Privacy_Dashboard"
+JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_PRIVACY_STATUS="Admin_Modules:_Privacy_Status_Check"
 JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_QUICKICON="Admin_Modules:_Quick_Icons"
+JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_SAMPLE_DATA="Admin_Modules:_Sample_Data"
 JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_STATUS_USER="Admin_Modules:_User_Menu"
 JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_SUBMENU="Admin_Modules:_Administrator_Dashboard_Menu"
 JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_TITLE="Admin_Modules:_Title"
@@ -816,7 +818,7 @@ JHELP_EXTENSIONS_MODULE_MANAGER_STATISTICS="Site_Modules:_Statistics"
 JHELP_EXTENSIONS_MODULE_MANAGER_SYNDICATION_FEEDS="Site_Modules:_Syndication_Feeds"
 JHELP_EXTENSIONS_MODULE_MANAGER_TAGS_POPULAR="Site_Modules:_Tags_-_Popular"
 JHELP_EXTENSIONS_MODULE_MANAGER_TAGS_SIMILAR="Site_Modules:_Tags_-_Similar"
-JHELP_EXTENSIONS_MODULE_MANAGER_WHO_ONLINE="Site_Modules:_Who's_Online"
+JHELP_EXTENSIONS_MODULE_MANAGER_WHO_ONLINE="Site_Modules:_Who%27s_Online"
 JHELP_EXTENSIONS_MODULE_MANAGER_WRAPPER="Site_Modules:_Wrapper"
 JHELP_EXTENSIONS_PLUGIN_MANAGER="Plugins"
 JHELP_EXTENSIONS_PLUGIN_MANAGER_EDIT="Plugins:_Name_of_Plugin"
