--- a/administrator/language/en-GB/com_installer.ini
+++ b/administrator/language/en-GB/com_installer.ini
@@ -243,7 +243,7 @@ COM_INSTALLER_TYPE_TYPE_MODULE="module"
 COM_INSTALLER_TYPE_TYPE_PACKAGE="package"
 COM_INSTALLER_TYPE_TYPE_PLUGIN="plugin"
 COM_INSTALLER_TYPE_TYPE_TEMPLATE="template"
-COM_INSTALLER_UNABLE_TO_FIND_INSTALL_PACKAGE="Unable to find install package"
+COM_INSTALLER_UNABLE_TO_FIND_INSTALL_PACKAGE="Unable to find install package."
 COM_INSTALLER_UNABLE_TO_INSTALL_JOOMLA_PACKAGE="The Joomla package cannot be installed through the Extension Manager. Please use the <a href='%s'>Joomla! Update</a> component to update Joomla."
 COM_INSTALLER_UNINSTALL_ERROR="Error uninstalling %s."
 COM_INSTALLER_UNINSTALL_ERROR_LOCKED_EXTENSION="The extension \"%1s\" (ID %2s) is locked and cannot be uninstalled."
